# data-testing-bootcamp-challenge-solved

./: README.md  pyproject.toml  requirements.txt
qa_challenge/: constants.py
qa_challenge/sql/: avg_age_by_gender.sql  most_interacted_videos_per_country.sql
tests/: conftest.py
tests/assets/result/: avg_age_by_gender.csv  most_interacted_videos_per_country.csv
tests/assets/source/: viewership_data.csv
tests/sql/: test_sql.py
