[tool.poetry]
name = "qa-challenge"
version = "0.1.0"
description = ""
authors = ["Enrique Olivares <Enrique.Olivares@nike.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
duckdb = "^0.10.1"
pandas = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
